# grekko

./: .env.production.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  FUTURE_ROADMAP.md  GAP_ANALYSIS_RISK_ASSESSMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  REMEDIATION_SUMMARY.md  SCALING_STRATEGY.md  SOLANA_SNIPER_README.md  alembic.ini  development_plan.md  instructions.md  pre-commit-config.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup_env.sh  start_sniper.py  test_sniper_integration.py
alembic/: env.py
config/: agent_config.yaml  exchanges.yaml  main.yaml
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh
docs/: 0_comprehensive_system_specification.md  0_metamask_documentation_index.md  1_context_and_requirements.md  1_metamask_deployment_guide.md  1_technical_requirements_analysis.md  2_domain_model.md  2_domain_model_specification.md  2_metamask_monitoring_guide.md  3_metamask_troubleshooting_guide.md  3_pseudocode_coinbase_integration.md  3_pseudocode_trading_orchestration.md  4_metamask_developer_guide.md  4_pseudocode_metamask_integration.md  4_pseudocode_risk_management.md  5_pseudocode_ai_ensemble_system.md  5_pseudocode_mcp_implementation.md  5_wallet_integration_implementation_guide.md  6_pseudocode_mode_dependent_trading.md  6_wallet_integration_api_reference.md  7_pseudocode_multi_agent_coordination.md  7_wallet_integration_frontend_guide.md  8_pseudocode_risk_management.md  8_wallet_integration_troubleshooting_guide.md  9_wallet_integration_deployment_summary.md  (+47 more)
(+231 files in other folders)
