[metadata]
name = grekko
version = 0.1.0
description = Grekko Cryptocurrency Trading Platform
author = Grekko Dev Team
license = MIT

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.11
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    grekko=src.main:main